--- a/posts/2014-12-31-try-hhvm.markdown
+++ b/posts/2014-12-31-try-hhvm.markdown
@@ -3,7 +3,7 @@ layout: post
 title: 尝试hhvm
 date: 2014-12-31 16:10:28 +0000
 comments: true
-tags: linux web
+tags: linux, web
 ---
 
 今天听到一个新闻说维基百科把他的php引擎由zend全面转到hhvm了，详情见[这里](https://www.mediawiki.org/wiki/HHVM)。其实之前对于这东西是闻所未闻的，太不关注php的发展了，后来详细搜了一下，才稍微了解了一点php代码的执行过程。
